// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Radio default 1`] = `
<label
  class="arco-radio"
>
  <input
    type="radio"
    value=""
  />
  <span
    class="arco-icon-hover arco-radio-icon-hover arco-radio-mask-wrapper"
  >
    <div
      class="arco-radio-mask"
    />
  </span>
</label>
`;

exports[`ConfigProvider componentConfig.Radio set className globally 1`] = `
<label
  class="arco-radio global-default-class"
>
  <input
    type="radio"
    value=""
  />
  <span
    class="arco-icon-hover arco-radio-icon-hover arco-radio-mask-wrapper"
  >
    <div
      class="arco-radio-mask"
    />
  </span>
</label>
`;

exports[`ConfigProvider componentConfig.Radio set className globally and component set className itself. 1`] = `
<label
  class="arco-radio component-class"
>
  <input
    type="radio"
    value=""
  />
  <span
    class="arco-icon-hover arco-radio-icon-hover arco-radio-mask-wrapper"
  >
    <div
      class="arco-radio-mask"
    />
  </span>
</label>
`;

exports[`ConfigProvider componentConfig.Radio set data-* property 1`] = `
<label
  class="arco-radio"
  data-test-name="Radio"
>
  <input
    type="radio"
    value=""
  />
  <span
    class="arco-icon-hover arco-radio-icon-hover arco-radio-mask-wrapper"
  >
    <div
      class="arco-radio-mask"
    />
  </span>
</label>
`;
